--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
           <li><a href="#Presentacion" class="nav_item">Presentación</a></li>
           <li><a href="#conocimientos" class="nav_item">Mis Conocimientos</a></li>
           <li><a href="#proyectos" class="nav_item">Mis Proyectos</a></li>
-          <li><a href="#" class="nav_item">Contacto</a></li>
+          <li><a href="#contacto" class="nav_item">Contacto</a></li>
         </ul>
       </nav>
       <section class="title" id="Presentacion">
-        <div class="title_text">
-          <h2>¡Hola! Soy</h2>
-          <h1>RUTH DELGADO</h1>
-          <h3>Frontend Developer</h3>
+        <!-- este div lo hice para usar flex en minwidth 768px -->
+        <div class="title_t_i"> 
+          <div class="title_text">
+            <h2>¡Hola! Soy</h2>
+            <h1>RUTH DELGADO</h1>
+            <h3>Frontend Developer</h3>
+          </div>
+          <picture class="title_img"><img src="./assets/imagenes/perfil.jpg" alt="Ruth Delgado"></picture>
         </div>
-        <picture class="title_img"><img src="./assets/imagenes/perfil.jpg" alt="Ruth Delgado"></picture>
         <section class="soy">       
             <h3>Yo soy</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis sint deleniti aliquid sunt, nam quo neque commodi id ipsam ad fugiat, eaque repellat reprehenderit cupiditate natus ab ullam possimus?</p>
@@ -48,7 +51,7 @@
         </div>
       </section>
       <section class="proyectos">
-        <h2 id="proyectos">Mis Proyectos</h2>
+        <h2 class="p_title" id="proyectos">Mis Proyectos</h2>
         <div class="proyectos_gallery">
           <a href=" https://ruthdgd.github.io/ruthD-tp1/" target="_blank">
             <img src="./assets/imagenes/oceanSummer.PNG" alt="Trabajo de medias querys">
@@ -67,15 +70,15 @@
           <p class="contacto_text_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, ullam? Non vero labore et quo dolore placeat magni architecto, ratione voluptatibus porro sequi perferendis.</p>
           <div class="contacto_redes">
             <div class="red instagram">
-              <img src="./assets/iconos/instagram.png" alt="">
+              <img src="./assets/iconos/instagram.png" alt="logo Instagram">
               <p>ruthdgd</p>
             </div>
             <div class="red linkedin">
-              <img src="./assets/iconos/linkedin.png" alt="">
+              <img src="./assets/iconos/linkedin.png" alt="logo LinkedIn">
               <p>linkedin.com/in/ruth-dgd</p>
             </div>
             <div class="red email">
-              <img src="./assets/iconos/sobre.png" alt="">
+              <img src="./assets/iconos/sobre.png" alt="logo e-mail">
               <p>rinesdelgo@gmail.com</p>
             </div>
           </div>
@@ -113,7 +116,7 @@
         <li><a href="#Presentacion" class="nav_item">Presentación</a></li>
         <li><a href="#conocimientos" class="nav_item">Mis Conocimientos</a></li>
         <li><a href="#proyectos" class="nav_item">Mis Proyectos</a></li>
-        <li><a href="#" class="nav_item">Contacto</a></li>
+        <li><a href="#contacto" class="nav_item">Contacto</a></li>
       </ul>
       <h3 class="pie_creador"> &copy; Creado por RUTH DELGADO</h3>
     </footer>
