--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <input type="text" placeholder="Escribe tu apellido" id="Apellido">
           </div>
           <div class="form form_email">
-            <label for="e-mail">e-mail:</label>
-            <input type="email" name="" id="" placeholder="ejemplo@email.com">
+            <label for="email">e-mail:</label>
+            <input type="email" name="email" id="email" placeholder="ejemplo@email.com">
           </div>
           <div class="form form_telefono">
             <label for="telefono">Telefono:</label>
@@ -103,7 +103,7 @@
           </div>
           <div class="form form_mensaje">
             <label for="mensaje">Mensaje</label>
-            <textarea name="" id="" cols="30" rows="10">Escribe un mensaje</textarea>
+            <textarea name="mensaje" id="mensaje" cols="30" rows="10">Escribe un mensaje</textarea>
           </div>
           <div class="form form_enviar">
             <input type="submit" value="Enviar">
