h4 galleria de proyectos

--- a/index.html
+++ b/index.html
@@ -53,15 +53,24 @@
       <section class="proyectos">
         <h2 class="p_title" id="proyectos">Mis Proyectos</h2>
         <div class="proyectos_gallery">
-          <a href=" https://ruthdgd.github.io/ruthD-tp1/" target="_blank">
-            <img src="./assets/imagenes/oceanSummer.PNG" alt="Trabajo de medias querys">
-          </a>
-          <a href="https://ruthdgd.github.io/ruth_delgadotp2/" target="_blank">
-            <img src="./assets/imagenes/MortalKombat.PNG" alt="Trabajo mobile first">
-          </a>
-          <a href="https://ruthdgd.github.io/transform/" target="_blank">
-            <img src="./assets/imagenes/transform.PNG" alt="Trabajo Transform">
-          </a>
+          <div>
+            <h4>Medias Querys</h4>
+            <a href=" https://ruthdgd.github.io/ruthD-tp1/" target="_blank">
+              <img src="./assets/imagenes/oceanSummer.PNG" alt="Trabajo de medias querys">
+            </a>
+          </div>
+          <div>
+            <h4>Mobile First</h4>
+            <a href="https://ruthdgd.github.io/ruth_delgadotp2/" target="_blank">
+              <img src="./assets/imagenes/MortalKombat.PNG" alt="Trabajo mobile first">
+            </a>
+          </div>
+          <div>
+            <h4>Transform</h4>
+            <a href="https://ruthdgd.github.io/transform/" target="_blank">
+              <img src="./assets/imagenes/transform.PNG" alt="Trabajo Transform">
+            </a>
+          </div>
         </div>
       </section>
       <section class="contacto">        
